--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                         <i class="fas fa-vr-cardboard placeholder-icon"></i>
                     </a>
                     <div class="project-info">
-                        <h3><a href="project1.html">虛擬共生 (Symbiosis)</a></h3>
-                        <p>即時互動裝置，透過感測器捕捉觀眾動態並轉化為粒子流體。</p>
+                        <h3><a href="project1.html">施工中 (Symbiosis)</a></h3>
+                        <p>施工中</p>
                         <div class="project-links">
                             <a href="project1.html"><i class="fas fa-info-circle"></i> 詳細介紹</a>
                             <a href="#" target="_blank"><i class="fas fa-play-circle"></i> Watch Video</a>
@@ -105,8 +105,8 @@
                          <i class="fas fa-wave-square placeholder-icon"></i>
                     </a>
                     <div class="project-info">
-                        <h3><a href="project2.html">聲波地景 (Soundscape)</a></h3>
-                        <p>音訊視覺化實驗，將城市噪音轉化為 3D 地形起伏。</p>
+                        <h3><a href="project2.html">施工中 </a></h3>
+                        <p>施工中</p>
                         <div class="project-links">
                             <a href="project2.html"><i class="fas fa-info-circle"></i> 詳細介紹</a>
                             <a href="#" target="_blank"><i class="fas fa-play-circle"></i> Watch Video</a>
@@ -116,7 +116,7 @@
             </div>
 
             <!-- 靜態作品區 -->
-            <h3 class="category-title hidden" style="margin-top: 60px;">Static / Visuals</h3>
+            <h3 class="category-title hidden" style="margin-top: 60px;">施工中</h3>
             <div class="projects-grid hidden">
                 <!-- 專案卡片 3 -->
                 <div class="project-card hidden">
@@ -124,8 +124,8 @@
                          <i class="fas fa-image placeholder-icon"></i>
                     </a>
                     <div class="project-info">
-                        <h3><a href="project3.html">無盡迴廊 (Infinite Loop)</a></h3>
-                        <p>數位合成攝影，探討空間與遞迴的哲學概念。</p>
+                        <h3><a href="project3.html">施工中</a></h3>
+                        <p>施工中</p>
                         <div class="project-links">
                             <a href="project3.html"><i class="fas fa-info-circle"></i> 詳細介紹</a>
                             <a href="#" target="_blank"><i class="fas fa-expand"></i> View Gallery</a>
@@ -140,7 +140,7 @@
     <section id="contact" class="section">
         <div class="container contact-container hidden">
             <h2 class="section-title">Contact</h2>
-            <p>開放跨領域合作與展覽邀約</p>
+            <p>施工中</p>
             <div class="social-links">
                 <a href="mailto:example@email.com" class="social-icon"><i class="fas fa-envelope"></i></a>
                 <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
