--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
     <!-- 敘事轉場遮罩 (Narrative Overlay) -->
     <div id="narrative-overlay">
         <div class="noise-bg"></div>
-        <h1 class="glitch-text" data-text="我到底...是誰...?">我到底...是誰...?</h1>
+        <h1 class="glitch-text" data-text="我到底...是誰...?">我究竟...是誰...?</h1>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
