--- a/project1.html
+++ b/project1.html
@@ -64,7 +64,7 @@
     <!-- 敘事轉場遮罩 (Narrative Overlay) -->
     <div id="narrative-overlay">
         <div class="noise-bg"></div>
-        <h1 class="glitch-text" data-text="創作的意義...??">創作的意義...??</h1>
+        <h1 class="glitch-text" data-text="創作的意義...??">創作的意義是甚麼...?</h1>
     </div>
 
     <script src="script.js"></script>
@@ -292,4 +292,5 @@
         });
     </script>
 </body>
+
 </html>
